--- a/style.css
+++ b/style.css
@@ -40,7 +40,10 @@
 }
 
 .product-card img {
-    width: 80px;
+    width: 90px;
+    height: 90px;
+    border-radius: 20px;
+    object-fit: cover;
     margin-bottom: 20px;
 }
 
